# sdf-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
sdf_parser/: __init__.py  __main__.py  parser.py  utils.py
sdf_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: sample.sdf  test_parser.py
