[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-sdf-parser"
version = "0.1.2"
description = "A pure-Python parser for Standard Delay Format (SDF) files used in EDA timing flows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Rohan Chadhury", email = "rohaanshahid@gmail.com" }
]
keywords = ["EDA", "SDF", "timing", "VLSI", "parser", "semiconductor", "Liberty", "delay"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research"
]
requires-python = ">=3.7"
dependencies = []

[project.optional-dependencies]
color = ["termcolor>=1.1"]
dev   = ["pytest>=7", "termcolor>=1.1"]

[project.scripts]
sdf-parser = "sdf_parser.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdf_parser*"]

[project.urls]
Homepage = "https://github.com/rohaansch/sdf-parser"
